--- a/profile/user3/index.html
+++ b/profile/user3/index.html
@@ -1,146 +1,229 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Join 'Seeking Adventures' on Wanderly! Follow thrilling travel experiences, find new places to explore, and connect with like-minded adventurers.">
-  <link rel="stylesheet" href="/css/style.css">
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
-  <link rel="manifest" href="/assets/site.webmanifest">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Molle:ital@0;1&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-  <script src="/js/script.js" defer></script>
-  <title>Seeking Adventures - Wanderly</title>
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Join 'Seeking Adventures' on Wanderly! Follow thrilling travel experiences, find new places to explore, and connect with like-minded adventurers."
+    />
+    <link rel="stylesheet" href="/css/style.css" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/assets/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/assets/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/assets/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/assets/site.webmanifest" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Molle:ital@0;1&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <script src="/js/script.js" defer></script>
+    <title>Seeking Adventures - Wanderly</title>
+  </head>
 
-<body class="font-body bg-lightBackground text-lightText dark:bg-darkElements min-h-screen flex flex-col">
-  <header class="bg-lightHeaderFooter dark:bg-darkElements dark:text-darkText dark:border-b dark:border-darkText flex justify-between items-center p-4 lg:p-8">
-    <div>
-      <h1 class="font-display text-2xl lg:text-4xl">Wanderly</h1>
-    </div>
-    <div class="relative flex items-center">
-      <button id="toggle-menu" class="lg:hidden text-2xl">☰</button>
-      <nav class="hidden lg:flex flex-row space-x-6 font-heading text-xl lg:text-2xl">
-        <a href="/feed/index.html" class="hover:italic">Explore</a>
-        <a href="/profile/index.html" class="hover:italic">My Profile</a>
-        <a href="/index.html" class="hover:italic">Logout</a>
-      </nav>
-    </div>
-  </header>
-  
-  <nav id="mobile-menu" class="hidden bg-lightHeaderFooter dark:bg-darkElements w-full p-4">
-    <ul class="flex flex-col items-center space-y-4 font-heading text-xl dark:text-darkText">
-      <li><a href="/feed/index.html" class="p-2 text-center block">Explore</a></li>
-      <li><a href="/profile/index.html" class="p-2 text-center block">My Profile</a></li>
-      <li><a href="/index.html" class="p-2 text-center block">Logout</a></li>
-    </ul>
-  </nav>
+  <body
+    class="flex min-h-screen flex-col bg-lightBackground font-body text-lightText dark:bg-darkElements"
+  >
+    <header
+      class="flex items-center justify-between bg-lightHeaderFooter p-4 dark:border-b dark:border-darkText dark:bg-darkElements dark:text-darkText lg:p-8"
+    >
+      <div>
+        <h1 class="font-display text-2xl lg:text-4xl">Wanderly</h1>
+      </div>
+      <div class="relative flex items-center">
+        <button id="toggle-menu" class="text-2xl lg:hidden">☰</button>
+        <nav
+          class="hidden flex-row space-x-6 font-heading text-xl lg:flex lg:text-2xl"
+        >
+          <a href="/feed/index.html" class="hover:italic">Explore</a>
+          <a href="/profile/index.html" class="hover:italic">My Profile</a>
+          <a href="/index.html" class="hover:italic">Logout</a>
+        </nav>
+      </div>
+    </header>
 
-  <main class="pl-4 pr-4 lg:pl-20 lg:pr-20">
-    <section>
-      <div class="bg-lightBackground dark:bg-white border border-darkElements shadow-lg rounded-lg mt-10 mb-10 p-4 flex flex-col md:flex-row justify-center gap-8">
-        <div>
-          <img 
-            class="md:h-96 md:w-auto" 
-            src="/assets/avatar3.jpg"
-            alt="Couple sitting on a bridge overlooking a river and high mountains">
-        </div>
-        <div>
-          <div class="border-b border-darkElements">
-            <h2 class="text-xl lg:text-2xl font-heading mb-2">Seeking Adventures</h2>
-          </div>
-          <p class="mt-2 text-lg">Couple who sold everything currently on the longest honeymoon ever</p>
-          <div class="flex mt-8 gap-10">
-            <div class="text-center">
-              <p class="text-lg">Followed by:</p>
-              <p class="font-display text-xl">273</p>
-            </div>
-            <div class="text-center">
-              <p class="text-lg">Following:</p>
-              <p class="font-display text-xl">241</p>
-            </div>
+    <nav
+      id="mobile-menu"
+      class="hidden w-full bg-lightHeaderFooter p-4 dark:bg-darkElements"
+    >
+      <ul
+        class="flex flex-col items-center space-y-4 font-heading text-xl dark:text-darkText"
+      >
+        <li>
+          <a href="/feed/index.html" class="block p-2 text-center">Explore</a>
+        </li>
+        <li>
+          <a href="/profile/index.html" class="block p-2 text-center"
+            >My Profile</a
+          >
+        </li>
+        <li><a href="/index.html" class="block p-2 text-center">Logout</a></li>
+      </ul>
+    </nav>
+
+    <main class="pl-4 pr-4 lg:pl-20 lg:pr-20">
+      <section>
+        <div
+          class="mb-10 mt-10 flex flex-col justify-center gap-8 rounded-lg border border-darkElements bg-lightBackground p-4 shadow-lg dark:bg-white md:flex-row"
+        >
+          <div>
+            <img
+              class="md:h-96 md:w-auto"
+              src="/assets/avatar3.jpg"
+              alt="Couple sitting on a bridge overlooking a river and high mountains"
+            />
           </div>
           <div>
-            <button class="font-display bg-lightHeaderFooter border border-darkElements mt-10 rounded-md shadow-md px-4 py-1 text-xl hover:brightness-95 hover:shadow-lg">Follow User</button>
+            <div class="border-b border-darkElements">
+              <h2 class="mb-2 font-heading text-xl lg:text-2xl">
+                Seeking Adventures
+              </h2>
+            </div>
+            <p class="mt-2 text-lg">
+              Couple who sold everything currently on the longest honeymoon ever
+            </p>
+            <div class="mt-8 flex gap-10">
+              <div class="text-center">
+                <p class="text-lg">Followed by:</p>
+                <p class="font-display text-xl">273</p>
+              </div>
+              <div class="text-center">
+                <p class="text-lg">Following:</p>
+                <p class="font-display text-xl">241</p>
+              </div>
+            </div>
+            <div>
+              <button
+                class="mt-10 rounded-md border border-darkElements bg-lightHeaderFooter px-4 py-1 font-display text-xl shadow-md hover:shadow-lg hover:brightness-95"
+              >
+                Follow User
+              </button>
+            </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <section>
-      <div class="border-b border-darkElements dark:border-darkText">
-        <h2 class="text-xl lg:text-2xl font-heading mb-2 dark:text-darkText">Posts by Seeking Adventures</h2>
-      </div>
-
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-        <div class="bg-lightBackground dark:bg-white border border-darkElements shadow-lg rounded-lg p-4 mt-8">
-          <h3 class="font-heading text-xl">Seeking Adventures</h3>
-          <img 
-            class="pt-4 pb-2" 
-            src="/assets/newyork-1.jpg"
-            alt="Radio City Music Hall illuminated at night, showcasing its iconic marquee and vibrant atmosphere in the heart of the city.">
-          <p><span class="font-bold">Posted on:</span> 9th of July</p>
-          <p><span class="font-bold">Tag:</span> North America</p>
-          <p>Loving the look of the radio city music hall at night.</p>
-        </div>
-        
-        <div class="bg-lightBackground dark:bg-white border border-darkElements shadow-lg rounded-lg p-4 mt-8">
-          <h3 class="font-heading text-xl">Seeking Adventures</h3>
-          <img 
-            class="pt-4 pb-2" 
-            src="/assets/newyork-2.jpg"
-            alt="The iconic Flatiron Building stands tall in New York City, showcasing its unique triangular shape against the skyline.">
-          <p><span class="font-bold">Posted on:</span> 9th of July</p>
-          <p><span class="font-bold">Tag:</span> North America</p>
-          <p>Just arrived in New York after a longish flight from Iceland.</p>
+      <section>
+        <div class="border-b border-darkElements dark:border-darkText">
+          <h2 class="mb-2 font-heading text-xl dark:text-darkText lg:text-2xl">
+            Posts by Seeking Adventures
+          </h2>
         </div>
 
-        <div class="bg-lightBackground dark:bg-white border border-darkElements shadow-lg rounded-lg p-4 mt-8">
-          <h3 class="font-heading text-xl">Seeking Adventures</h3>
-          <img 
-            class="pt-4 pb-2" 
-            src="/assets/iceland-2.jpg"
-            alt="A serene blue lake surrounded by stunning Icelandic landscapes under a clear sky.">
-          <p><span class="font-bold">Posted on:</span> 6th of July</p>
-          <p><span class="font-bold">Tag:</span> Europe</p>
-          <p>Had to see the blue lagoon when we were in Iceland!</p>
+        <div class="grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-3">
+          <div
+            class="mt-8 rounded-lg border border-darkElements bg-lightBackground p-4 shadow-lg dark:bg-white"
+          >
+            <h3 class="font-heading text-xl">Seeking Adventures</h3>
+            <img
+              class="pb-2 pt-4"
+              src="/assets/newyork-1.jpg"
+              alt="Radio City Music Hall illuminated at night, showcasing its iconic marquee and vibrant atmosphere in the heart of the city."
+            />
+            <p><span class="font-bold">Posted on:</span> 9th of July</p>
+            <p><span class="font-bold">Tag:</span> North America</p>
+            <p>Loving the look of the radio city music hall at night.</p>
+          </div>
+
+          <div
+            class="mt-8 rounded-lg border border-darkElements bg-lightBackground p-4 shadow-lg dark:bg-white"
+          >
+            <h3 class="font-heading text-xl">Seeking Adventures</h3>
+            <img
+              class="pb-2 pt-4"
+              src="/assets/newyork-2.jpg"
+              alt="The iconic Flatiron Building stands tall in New York City, showcasing its unique triangular shape against the skyline."
+            />
+            <p><span class="font-bold">Posted on:</span> 9th of July</p>
+            <p><span class="font-bold">Tag:</span> North America</p>
+            <p>Just arrived in New York after a longish flight from Iceland.</p>
+          </div>
+
+          <div
+            class="mt-8 rounded-lg border border-darkElements bg-lightBackground p-4 shadow-lg dark:bg-white"
+          >
+            <h3 class="font-heading text-xl">Seeking Adventures</h3>
+            <img
+              class="pb-2 pt-4"
+              src="/assets/iceland-2.jpg"
+              alt="A serene blue lake surrounded by stunning Icelandic landscapes under a clear sky."
+            />
+            <p><span class="font-bold">Posted on:</span> 6th of July</p>
+            <p><span class="font-bold">Tag:</span> Europe</p>
+            <p>Had to see the blue lagoon when we were in Iceland!</p>
+          </div>
+
+          <div
+            class="mt-8 rounded-lg border border-darkElements bg-lightBackground p-4 shadow-lg dark:bg-white"
+          >
+            <h3 class="font-heading text-xl">Seeking Adventures</h3>
+            <img
+              class="pb-2 pt-4"
+              src="/assets/iceland-1.jpg"
+              alt="A stunning display of the aurora borealis lights up the night sky over Iceland's serene landscape."
+            />
+            <p><span class="font-bold">Posted on:</span> 5th of July</p>
+            <p><span class="font-bold">Tag:</span> Europe</p>
+            <p>
+              So happy we got to experience the northern lights here in Iceland!
+            </p>
+          </div>
         </div>
 
-        <div class="bg-lightBackground dark:bg-white border border-darkElements shadow-lg rounded-lg p-4 mt-8">
-          <h3 class="font-heading text-xl">Seeking Adventures</h3>
-          <img 
-            class="pt-4 pb-2" 
-            src="/assets/iceland-1.jpg"
-            alt="A stunning display of the aurora borealis lights up the night sky over Iceland's serene landscape.">
-          <p><span class="font-bold">Posted on:</span> 5th of July</p>
-          <p><span class="font-bold">Tag:</span> Europe</p>
-          <p>So happy we got to experience the northern lights here in Iceland!</p>
+        <div class="mt-10 text-center">
+          <a
+            href="/feed/index.html"
+            class="rounded-md border border-darkElements bg-lightHeaderFooter px-4 py-1 font-display text-xl shadow-md hover:shadow-lg hover:brightness-95"
+            >Back To All Posts</a
+          >
         </div>
+      </section>
+    </main>
+
+    <footer
+      class="mt-10 bg-lightHeaderFooter dark:border-t dark:border-darkText dark:bg-darkElements lg:mt-20"
+    >
+      <div class="flex items-center justify-center pt-4">
+        <button
+          id="toggle-theme"
+          class="rounded-md border border-darkElements bg-lightBackground px-4 py-1 font-display text-xl shadow-md hover:shadow-lg hover:brightness-95"
+        >
+          Change Mode
+        </button>
       </div>
 
-      <div class="text-center mt-10">
-        <a href="/feed/index.html" class="font-display bg-lightHeaderFooter border border-darkElements rounded-md shadow-md px-4 py-1 text-xl hover:brightness-95 hover:shadow-lg">Back To All Posts</a>
+      <div class="font-heading text-lg">
+        <nav
+          class="flex flex-col items-center space-y-4 py-4 dark:text-darkText"
+        >
+          <a href="#" class="hover:italic">About Wanderly</a>
+          <a href="#" class="hover:italic">Terms and Conditions</a>
+          <a href="#" class="hover:italic">Privacy Policy</a>
+        </nav>
       </div>
-    </section>
-  </main>
-
-  <footer class="bg-lightHeaderFooter dark:bg-darkElements mt-10 lg:mt-20 dark:border-t dark:border-darkText">
-    <div class="flex justify-center items-center pt-4">
-      <button id="toggle-theme" class="font-display bg-lightBackground border border-darkElements rounded-md shadow-md px-4 py-1 text-xl hover:brightness-95 hover:shadow-lg">Change Mode</button>
-    </div>
-
-    <div class="font-heading text-lg">
-      <nav class="flex flex-col  items-center py-4 space-y-4 dark:text-darkText">
-        <a href="#" class="hover:italic">About Wanderly</a>
-        <a href="#" class="hover:italic">Terms and Conditions</a>
-        <a href="#" class="hover:italic">Privacy Policy</a>
-      </nav>
-    </div>
-  </footer>
-</body>
+    </footer>
+  </body>
 </html>
